--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
         <title>ポートフォリオ</title>
-        <link rel="stylesheet" href="stylesheet_portfolio.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/Yukkikon/Myportfolio/main/style.css">
     </head>
     <body>
         <header>
