--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0"/>
         <title>ポートフォリオ</title>
-        <link rel="stylesheet" href="https://github.com/Yukkikon/Myportfolio/style.css">
+        <link rel="stylesheet" href="https://Yukkikon.github.io/Myportfolio/style.css">
     </head>
     <body>
         <header>
